订单列表页

--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -224,6 +224,7 @@
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 
 <script type="text/javascript" src="/xcview/js/shop/confirm_order.js"></script>
+<script type="text/javascript" src="/xcview/js/shop/order_center.js"></script>
 <script>
 	// 点击取消订单提示 
 	$(".cancel_order").click(function(){
