--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -471,13 +471,21 @@
     });
 	//选择商品后，点击确定
     $('.determine').click(function () {
-        requestService("/xczh/shop/checkout?skuId=141&quantity=1",null,function(){
-
-		});
+        var skuId = 110;
+        var quantity = 1;
+        var flag = false;
+        requestGetService("/xczh/shop/checkout?skuId="+skuId+"&quantity="+quantity,null,function(data){
+			if(data.success){
+				flag = true;
+			}
+		},true);
+        if(!falg){
+            return;
+		}
 		if(shoppingFlag == 1){
 		    alert("购物车添加逻辑");
 		}else{
-			buyNow();
+			window.location = "/xcview/html/shop/confirm_order.html?skuId="+skuId+"&quantity="+quantity;
 		}
     });
 	// 点击详情背景色
