--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2148,8 +2148,8 @@
 									<li>
 										<p class="select-sort">
 											<span>价格</span>
-											<i class="icomoon-icon-shang price-up"></i>
-											<i class="icomoon-icon-xia price-down"></i>
+											<i class="icomoon-icon-shang price-up" data-style="PRICE_ASC"></i>
+											<i class="icomoon-icon-xia price-down" data-style="PRICE_DESC"></i>
 										</p>
 									</li>
 									<li>
@@ -2158,29 +2158,27 @@
 									<li>
 										<p class="select-sort">
 											<span>库存</span>
-											<i class="icomoon-icon-shang stock-up"></i>
-											<i class="icomoon-icon-xia stock-down"></i>
+											<i class="icomoon-icon-shang stock-up" data-style="INVENTORY_ASC"></i>
+											<i class="icomoon-icon-xia stock-down" data-style="INVENTORY_DESC"></i>
 										</p>
 									</li>
 									<li>
 										<p class="select-sort">
 											<span>总销量</span>
-											<i class="icomoon-icon-shang sales-up"></i>
-											<i class="icomoon-icon-xia sales-down"></i>
+											<i class="icomoon-icon-shang sales-up" data-style="SALES_ASC"></i>
+											<i class="icomoon-icon-xia sales-down" data-style="SALES_DESC"></i>
 										</p>
 									</li>
 									<li>
 										<p class="select-sort">
 											<span>创建时间</span>
-											<i class="icomoon-icon-shang time-up"></i>
-											<i class="icomoon-icon-xia time-down"></i>
+											<i class="icomoon-icon-shang time-up" data-style="DATE_ASC"></i>
+											<i class="icomoon-icon-xia time-down" data-style="DATE_DESC"></i>
 										</p>
 									</li>
 									<li>
 										<p class="select-sort">
-											<span>序号</span>
-											<i class="icomoon-icon-shang number-up"></i>
-											<i class="icomoon-icon-xia number-down"></i>
+											<span>编号</span>
 										</p>
 									</li>
 								</ul>
