--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -306,84 +306,96 @@
 	</div>
 	<!-- 商品详情结束 -->
 
-		<!-- 常见问题开始 -->
-		<div class="FAQ">
-			<div class="issue">
-				<div class="title">常见问题</div>
-				<div class="issue_main">
-					<ul>
-						<li>
-							<span class="yuan"></span>
-							划线价格
-							<div class="center">商品的专柜商品的专柜商品的专柜商品的专柜商品的专柜</div>
-						</li>
-						<li>
-							<span class="yuan"></span>
-							划线价格
-							<div class="center">商品的专柜商品的专柜商品的专柜商品的专柜商品的专柜</div>
-						</li>
-					</ul>
-				</div>
+	<!-- 常见问题开始 -->
+	<!-- <div class="FAQ">
+		<div class="issue">
+			<div class="title">常见问题</div>
+			<div class="issue_main">
+				<ul>
+					<li>
+						<span class="yuan"></span>
+						划线价格
+						<div class="center">商品的专柜商品的专柜商品的专柜商品的专柜商品的专柜</div>
+					</li>
+					<li>
+						<span class="yuan"></span>
+						划线价格
+						<div class="center">商品的专柜商品的专柜商品的专柜商品的专柜商品的专柜</div>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<div class="hide_hide"></div>
-		<!-- 常见问题结束 -->
-		
-		<!-- 底部开始 -->
-		<div class="footer">
-			<div class="center">
-				<div class="service">
-					<img src="/xcview/images/shop/service.png" alt="" />
-					客服
-				</div>
-				<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">
-					<img src="/xcview/images/shop/shopping_cart.png" alt="" />
-					购物车
-					<span class="shopping_quantity">12</span>
-				</div>
-				<div class="deal">
-					<div class="add_cart">加入购物车</div>
-					<div class="buy_now">立即购买</div>
-				</div>
+	</div>
+	 -->
+	<!-- 常见问题结束 -->
+	<div class="hide_hide"></div>
+	<!-- 底部开始 -->
+	<div class="footer">
+		<div class="center">
+			<div class="service">
+				<img src="/xcview/images/shop/service.png" alt="" />
+				客服
+			</div>
+			<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">
+				<img src="/xcview/images/shop/shopping_cart.png" alt="" />
+				购物车
+				<span class="shopping_quantity">12</span>
+			</div>
+			<div class="deal">
+				<div class="add_cart">加入购物车</div>
+				<div class="buy_now">立即购买</div>
 			</div>
 		</div>
-		<!-- 底部结束 -->
+	</div>
+	<!-- 底部结束 -->
+	<div class="main">
+		<script type="text/html" id="main">
+		<div class="">1111</div>
+		</script>
+	</div>
 
-		<!-- 点击购物车出现提示开始 -->
-		<div class="shopping_trolley">
-			<div class="shopping_trolley_bg"></div>
-			<div class="shopping_trolley_main">
-				<div class="shopping_trolley_center">
-					<div class="message">
-						<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />
-						<div class="information">
-							<div class="price">￥100.00</div>
-							<div class="repertory">库存120件</div>
-							<div class="category">
-								<span class="choice">选择</span>
-								<span class="specification">规格</span>
-								<span class="kind">分类</span>
-							</div>
+	<!-- 点击购物车出现提示开始 -->
+	<div class="shopping_trolley" style="display: block !important;">
+		<div class="shopping_trolley_bg"></div>
+		<div class="shopping_trolley_main" style="height:8.28rem;">
+			<div class="shopping_trolley_center">
+				<div class="message">
+					<script type="text/html" id="message">
+					<img src="{{items.productImages[0].source}}" alt="" class="surface_plot" />
+					
+					<div class="information">
+						<div class="price">￥{{items.sales}}</div>
+						<div class="repertory">库存120件</div>
+						<div class="category">
+							<span class="choice">选择</span>
+							<span class="specification">规格</span>
+							<span class="kind">分类</span>
 						</div>
 					</div>
-					<div class="specifications">
-						<span class="">规格</span>
-						<ul class="specifications_ul">
-							<li class="casing include">5包装</li>
-							<li class="casing include">1盒10包装</li>
-							<li class="casing include">2盒22包装</li>
-							<li class="casing include">一箱8盒100包</li>
-						</ul>
-					</div>
+					</script>
+				</div>
+				<div class="specifications">
+					<script type="text/html" id="specifications">
+					{{each item as item i}}
+					<span class="">{{item.name}}</span>
+					<ul class="specifications_ul">
+						{{each item.entries as item i}}
+						<li class="casing include">{{item.value}}</li>
+						{{/each}}
+					</ul>
+					{{/each}}
+					</script>
+				</div>
 
-					<div class="classify">
-						<span class="">分类</span>
-						<ul class="classify_ul">
-							<li class="hue include">红色</li>
-							<li class="hue include">白色</li>
-							<li class="hue include">黄色</li>
-						</ul>
-					</div>
+				<!-- <div class="classify">
+					<span class="">分类</span>
+					<ul class="classify_ul">
+						<li class="hue include">红色</li>
+						<li class="hue include">白色</li>
+						<li class="hue include">黄色</li>
+					</ul>
+				</div> -->
+				<div class="bottom_fiexd">
 					<div class="buy">
 						<div class="purchase_quantity">购买数量</div>
 						<center>
@@ -394,7 +406,8 @@
 				</div>
 			</div>
 		</div>
-		<!-- 点击购物车出现提示结束 -->
+	</div>
+	<!-- 点击购物车出现提示结束 -->
 
 		<!-- 点击分享提示开始 -->
 		<div class="weixin_ceng">
