商品添加title属性

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2192,7 +2192,7 @@
 												<div class="img-ware-show z">
 													<img src="{{item.picture}}"/>
 												</div>
-												<p class="ware-name">{{item.name}}</p>
+												<p class="ware-name" title="{{item.name}}">{{item.name}}</p>
 												<p class="ware-price">&yen; {{item.price}}</p>
 											</div>
 											<div class="page-view z">
@@ -2208,7 +2208,7 @@
 											<div class="creation-time z">
 												<span>{{item.createddate}}</span>
 											</div>
-											<div class="order-number z">
+											<div class="order-number z" title="{{item.sn}}">
 												<span>{{item.sn}}</span>
 											</div>
 										</li>
