[feat]订单支付相关，新增shop.url

--- a/wechat/src/main/webapp/xcview/html/shop/method.html
+++ b/wechat/src/main/webapp/xcview/html/shop/method.html
@@ -125,7 +125,7 @@
             if(data.success){
                 console.info(data);
                 $("#ipandatcmUserId").val(data.resultObject.ipandatcmUserId);
-                $("#ipandatcmUserId").attr("action",data.resultObject.ipandatcmUserId + '/payment');
+                $("#payment").attr("action",data.resultObject.shopUrl + '/payment');
                 $(".amount").html(data.resultObject.amount);
                 var str = '';
                 for(var i=0;i<data.resultObject.orderSns.length;i++){
