[feat]订单支付相关

--- a/wechat/src/main/webapp/xcview/html/shop/method.html
+++ b/wechat/src/main/webapp/xcview/html/shop/method.html
@@ -63,11 +63,11 @@
 		<div class="payment_title">选择支付方式</div>
 		<div class="payment_ul">
 			<ul id="ul">
-				<li class="ul_li" data-value="alipayPagePaymentPlugin">
+				<li class="ul_li" data-value="alipayWapPaymentPlugin">
 					<img src="/xcview/images/pay01.png" class="BTCpanda" />支付宝
 					<div class="ul_li_bg"></div>
 				</li>
-				<li class="ul_li" data-value="weixinNativePaymentPlugin">
+				<li class="ul_li" data-value="wechatPay" >
 					<img src="/xcview/images/weixin_img.png" class="weixin_img" />微信
 					<div class="ul_li_bg"></div>
 				</li>
@@ -139,7 +139,17 @@
         },false);
         
         $(".pay").click(function () {
-			$("#paymentPluginId").val($(".ul_li0").attr("data-value"));
+            var paymentPluginId = $(".ul_li0").attr("data-value");
+            if(paymentPluginId == 'wechatPay'){
+                var isWeChat = window.navigator.userAgent.indexOf('MicroMessenger') > -1;
+                if(isWeChat){
+                    paymentPluginId = 'weixinPublicPaymentPlugin';
+				}else{
+                    paymentPluginId = 'weixinH5PaymentPlugin';
+				}
+			}
+			alert(paymentPluginId);
+            $("#paymentPluginId").val(paymentPluginId);
             $("#payment").submit();
         });
     });
