--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -265,7 +265,7 @@
 	window.onload = function(){
 		// option_newest--最新    option_recommend--推荐   option_hottest--最热  option_price--价格
 		// 最新
-		$(".option_newest").click();
+		//$(".option_newest").click();
 		$(".option_newest").click(function(){
 			$(".option_newest").addClass("default_click");  //最新
 			$(".option_recommend").removeClass("default_click");
