推荐--全部推荐。详情添加点击事件--推荐

--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -28,6 +28,8 @@
 <link rel="stylesheet" href="/xcview/css/shop/jquery.spinner.css" /><!-- 点击数量加减 -->
 <link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
 <link rel="stylesheet" href="/xcview/css/shop/recommend.css" />
+<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
+
 </head>
 
 <body style="background: #F0F0F0;">
@@ -177,6 +179,11 @@
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> 
 <script type="text/javascript" src="/xcview/js/common/common.js"></script> 
+
+<script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
+
+<script type="text/javascript" src="/xcview/js/shop/recommend.js"></script>
+
 
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 
