--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -150,7 +150,7 @@
 	<div class="physician_recommend">
 		<div class="recommend_main">
 			<script type="text/html" id="recommend_main">
-			<div class="recommend" onclick="location.href ='/xcview/html/shop/recommend.html'">
+			<div class="recommend" onclick="listClick()">
 				<span class="title">医师推荐</span>
 				<span class="view_all">查看全部 <img src="/xcview/images/shop/view_all.png" alt="" /></span>
 				<div class="both"></div>
